# gitsemver

./: .gitignore  README.md  gitsemver.yml  pyproject.toml
gitsemver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: bump.sh
semver/: __init__.py  __main__.py  parse.py  version.py
test/: test_config.py  test_index.py  test_parse.py  test_version.py
test/fixture/: HEAD  __init__.py  gitsemver.yml  log
