[tool.poetry]
name = "semver"
version = "0.1.0"
description = "semantic versioning from git history"
authors = ["Allen Lawrence"]

[tool.poetry.dependencies]
python = "^3.8"
cleo = "^0.7.6"
pyyaml = "^5.3"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
