[tool.poetry]
name = "gitsemver"
version = "0.1.0"
description = "semantic versioning from git logs"
authors = ["Allen Lawrence"]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
